--- a/site1/upf/templates/statefulset-upf.yaml
+++ b/site1/upf/templates/statefulset-upf.yaml
@@ -96,9 +96,9 @@ spec:
         command: ["/bin/bash", "-xc"]
         args:
         {{- if .Values.config.upf.hugepage.enabled }}
-          - bessd -f --allow="$PCIDEVICE_INTEL_COM_INTEL_SRIOV_DPDK" --grpc_url=0.0.0.0:10514
+          - bessd -f -grpc-url=0.0.0.0:10514
         {{- else }}
-          - bessd -m 0 -f --allow="$PCIDEVICE_INTEL_COM_INTEL_SRIOV_DPDK" --grpc_url=0.0.0.0:10514
+          - bessd -m 0 -f -grpc-url=0.0.0.0:10514
         {{- end }}
         lifecycle:
           postStart:
