--- a/site1/upf/values_upf1.yaml
+++ b/site1/upf/values_upf1.yaml
@@ -1,54 +1,64 @@
+# SPDX-FileCopyrightText: 2022-present Intel Corporation
+# Copyright 2019-present Open Networking Foundation
+#
+# SPDX-License-Identifier: Apache-2.0
+
+# Override values for omec-user-plane Helm Chart
+# https://github.com/omec-project/sdcore-helm-charts/blob/main/bess-upf/values.yaml
 nodeSelectors:
   enabled: true
   upf:
     label: site
     value: site1
+enable: true
 resources:
   enabled: false
 images:
-  repository: "registry.opennetworking.org/docker.io/"
+  repository: "" # defaults to Docker Hub
+  # following two lines pull busybox from Docker Hub instead of Aether Registry
   tags:
-    tools: busybox:stable
+    tools: omecproject/busybox:stable
+    #  bess: <bess image tag>
+    #  pfcpiface: <pfcp image tag>
 config:
   upf:
-    name: "oaisim"
+    name: oaisim
     sriov:
-      enabled: false #default sriov is disabled in AIAB setup
+      enabled: false # SRIOV is disabled by default
     hugepage:
-      enabled: false #should be enabled if dpdk is enabled
-    cniPlugin: macvlan
+      enabled: false # Should be enabled if DPDK is enabled
+    cniPlugin: macvlan # Can be any other plugin. Dictates how IP address are assigned
     ipam: static
     enb:
-      subnet: "10.10.110.0/24" #this is your gNB network
+      subnet: 10.10.110.0/24 #this is your gNB network
     access:
-      iface: "ens4"
-      ip: "192.168.3.10/24" #New IP address for UPF3 access interface
-      gateway: "192.168.3.1"
+      iface: ens4
+      ip: 192.168.3.10/24 #New IP address for UPF3 access interface
+      gateway: 192.168.3.1
     core:
-      iface: "ens4"
-      ip: "192.168.4.10/24" #New IP address for UPF3 core interface
-      gateway: "192.168.4.1" 
+      iface: ens4
+      ip: 192.168.4.10/24 #New IP address for UPF3 core interface
+      gateway: 192.168.4.1
     cfgFiles:
-      upf.json:
-        mode: af_packet  #this mode means no dpdk
-        hwcksum: true       
+      upf.jsonc:
+        mode: af_packet # This mode implies no DPDK
+        hwcksum: true
+        log_level: trace
         measure_upf: true
         measure_flow: true
-        gtppsc: true #extension header is enabled in 5G. Sending QFI in pdu session extension header
+        gtppsc: true # Extension header enabled in 5G.
         cpiface:
-          dnn: "internet" #keep it matching with Slice dnn
-          hostname: "upf"
+          dnn: internet # Must match Slice dnn
+          hostname: upf
           #http_port: "8080"
-          enable_ue_ip_alloc: false # if true then it means UPF allocates address from below pool
-          ue_ip_pool: "172.250.0.0/16" # UE ip pool is used if enable_ue_ip_alloc is set to true
-        # Default global rate limits. Can be changed at runtime via BESS gRPC.
-        slice_rate_limit_config:
-            # Uplink
-            n6_bps: 2000000000 # 2GBps
-            n6_burst_bytes: 12500000 # 10ms * 1Gbps
-            # Downlink
-            n3_bps: 2000000000 # 2Gbbps
-            n3_burst_bytes: 12500000 # 10ms * 1Gbps
-            
+          enable_ue_ip_alloc: false # If true, UPF allocates address from following pool
+          ue_ip_pool: 172.250.0.0/16 # IP pool used UEs if enable_ue_ip_alloc=true
+        slice_rate_limit_config: # Slice-level rate limiting (also controlled by ROC)
+          # Uplink
+          n6_bps: 10000000000 # 10Gbps
+          n6_burst_bytes: 12500000 # 10ms * 10Gbps
+          # Downlink
+          n3_bps: 10000000000 # 10Gbps
+          n3_burst_bytes: 12500000 # 10ms * 10Gbps
 servicemonitor:
   enabled: true
