--- a/site1/upf/values_upf3.yaml
+++ b/site1/upf/values_upf3.yaml
@@ -60,3 +60,5 @@ config:
           # Downlink
           n3_bps: 10000000000 # 10Gbps
           n3_burst_bytes: 12500000 # 10ms * 10Gbps
+servicemonitor:
+  enabled: true
